# optifi-cpi

./: Anchor.toml  Cargo.toml  LICENSE  README.md
programs/optifi-cpi/: Cargo.toml
programs/optifi-cpi/src/: errors.rs  lib.rs
programs/optifi-cpi/src/constants/: devnet.rs  mainnet.rs  mod.rs
programs/optifi-cpi/src/financial/: asset.rs  instruments.rs  mod.rs  orders.rs
programs/optifi-cpi/src/instructions/: init_optifi_exchange.rs  mod.rs
programs/optifi-cpi/src/instructions/amm/: add_withdraw_request.rs  amm_deposit.rs  amm_withdraw.rs  calculate_delta.rs  calculate_proposal.rs  cancel_amm_orders.rs  consume_withdraw_queue.rs  initialize_amm.rs  mod.rs  sync_positions.rs  update_optifi_markets_for_amm.rs  update_orders_v3.rs
programs/optifi-cpi/src/instructions/authority/: mod.rs  update_deposit_limit.rs  update_exchange_authority.rs  update_iv_authority.rs  update_og_nft_mint.rs  update_operation_authority.rs  update_oracle.rs  withdraw_usdc_fee_pool.rs
programs/optifi-cpi/src/instructions/instrument_chain/: clean_expired_instrument_for_exchange.rs  create_instrument_without_auth.rs  generate_next_instrument.rs  mod.rs
programs/optifi-cpi/src/instructions/liquidations/: init_liquidation.rs  liquidation_place_order.rs  liquidation_register.rs  liquidation_settle_order.rs  liquidation_to_amm.rs  mod.rs
programs/optifi-cpi/src/instructions/margin/: calculate.rs  initialize.rs  mod.rs  update_iv.rs
programs/optifi-cpi/src/instructions/market_maker/: market_maker_withdrawal.rs  mm_calculation.rs  mm_cancel_order.rs  mm_post_only_order.rs  mm_settle_penalty_reward.rs  mod.rs  (+1 more)
programs/optifi-cpi/src/state/: amm_account_state.rs  amm_withdraw_queue.rs  chain.rs  exchange.rs  fee_account.rs  liquidation_state.rs  margin_stress_state.rs  market_maker_account.rs  mod.rs  optifi_market_state.rs  user_account.rs
programs/optifi-cpi/src/utils/: mod.rs  pda.rs  spl.rs
programs/optifi-usdc-cpi/: Cargo.toml  README.md  idl.json
programs/optifi-usdc-cpi/src/: lib.rs
(+25 files in other folders)
