[package]
name = "optifi-cpi"
version = "0.3.4"
description = "Interface for OptiFi Program"
edition = "2021"
authors = ["Wayne Kuo <wayne@optifi.app>"]
homepage = "https://www.optifi.app/"
repository = "https://github.com/OptiFi-Team/optifi-cpi"
keywords = ["solana", "optifi", "cpi", "trading", "option"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "optifi_cpi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["no-entrypoint"]
devnet = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"]}
anchor-spl = "0.24.2"
solana-program = "1.7"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
serum_dex = { version = "0.5.4", features = ["no-entrypoint"]}