[package]
name = "optifi-usdc-cpi"
version = "0.1.0"
description = "Interface for OptiFi USDC Program"
edition = "2021"
authors = ["Wayne Kuo <wayne@optifi.app>"]
homepage = "https://www.optifi.app/"
repository = "https://github.com/OptiFi-Team/optifi-cpi"
keywords = ["solana", "optifi", "cpi", "trading", "option"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
devnet = ["no-entrypoint"]


[dependencies]
anchor-gen = "0.3.0"
anchor-lang = ">=0.20"
